Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
Description
ANALYZE TABLE can complete on slave before a preceding transaction does so. E.g in case
of the binlogging slave and the strict gtid mode something like the following error
Last_SQL_Error: An attempt was made to binlog GTID 812700-812700-487719 which would create an out-of-order sequence number with existing GTID 812700-812700-487721, and gtid strict mode is enabled
|
may occur. In the specific paste above GTID 812700-812700-487721 corresponds to ANALYZE, and GTID 812700-812700-487719 to a regular BEGIN..COMMIT transaction binlogged earlier.
The error indicates the transaction binlogging on slave violates the master binlog order.
The reason of the failure has been identified as a flaw introduced by MDEV-17515.